<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="34dp"
        android:text="@string/calendar_app"
        android:textColor="@color/textBlue"
        android:textSize="33sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/black"
        android:padding="25dp"
        android:text="@string/age"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="34dp"
        android:text="@string/in_minutes"
        android:textColor="@color/textBlue"
        android:textSize="33sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnDataPicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/select_date"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvSelectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:text="@string/view"
        android:textColor="@color/textBlue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/selected_date"
        android:textColor="@color/lightGray"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/ageInMinute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/age_in_minute"
        android:textColor="@color/textBlue"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:text="@string/selected_date2"
        android:textColor="@color/lightGray"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>